// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render alignLabel 1`] = `
<div
  class="wp-components-form-group css-1bmv0pn"
  data-g2-c16t="true"
  data-g2-component="FormGroup"
>
  <div
    class="wp-components-grid wp-components-form-group css-2cxhgd"
    data-g2-c16t="true"
    data-g2-component="FormGroup"
  >
    <div
      class="wp-components-control-label css-2ldf03"
      data-g2-c16t="true"
      data-g2-component="ControlLabel"
    >
      <label
        class="wp-components-truncate wp-components-text wp-components-control-label css-1y64h1g"
        data-g2-c16t="true"
        data-g2-component="ControlLabel"
        for="fname"
      >
        First name
      </label>
    </div>
    <div
      class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-141ezrd"
      data-g2-c16t="true"
      data-g2-component="TextInput"
    >
      <div
        class="wp-components-flex-item wp-components-flex-block css-1mt9vp0"
        data-g2-c16t="true"
        data-g2-component="TextInputContent"
      >
        <input
          class="css-mtctxg"
          data-g2-c16t="true"
          data-g2-component="TextInputInput"
          id="fname"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-form-group css-1bmv0pn"
  data-g2-c16t="true"
  data-g2-component="FormGroup"
>
  <div
    class="wp-components-grid wp-components-form-group css-2cxhgd"
    data-g2-c16t="true"
    data-g2-component="FormGroup"
  >
    <div
      class="wp-components-control-label css-2ldf03"
      data-g2-c16t="true"
      data-g2-component="ControlLabel"
    >
      <label
        class="wp-components-truncate wp-components-text wp-components-control-label css-sju7lp"
        data-g2-c16t="true"
        data-g2-component="ControlLabel"
        for="fname"
      >
        First name
      </label>
    </div>
    <div
      class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-141ezrd"
      data-g2-c16t="true"
      data-g2-component="TextInput"
    >
      <div
        class="wp-components-flex-item wp-components-flex-block css-1mt9vp0"
        data-g2-c16t="true"
        data-g2-component="TextInputContent"
      >
        <input
          class="css-mtctxg"
          data-g2-c16t="true"
          data-g2-component="TextInputInput"
          id="fname"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render isMarginless 1`] = `
<div
  class="wp-components-form-group css-s4fsv1"
  data-g2-c16t="true"
  data-g2-component="FormGroup"
>
  <div
    class="wp-components-grid wp-components-form-group css-2cxhgd"
    data-g2-c16t="true"
    data-g2-component="FormGroup"
  >
    <div
      class="wp-components-control-label css-2ldf03"
      data-g2-c16t="true"
      data-g2-component="ControlLabel"
    >
      <label
        class="wp-components-truncate wp-components-text wp-components-control-label css-sju7lp"
        data-g2-c16t="true"
        data-g2-component="ControlLabel"
        for="fname"
      >
        First name
      </label>
    </div>
    <div
      class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-141ezrd"
      data-g2-c16t="true"
      data-g2-component="TextInput"
    >
      <div
        class="wp-components-flex-item wp-components-flex-block css-1mt9vp0"
        data-g2-c16t="true"
        data-g2-component="TextInputContent"
      >
        <input
          class="css-mtctxg"
          data-g2-c16t="true"
          data-g2-component="TextInputInput"
          id="fname"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render label without prop correctly 1`] = `
<div
  class="wp-components-form-group css-1bmv0pn"
  data-g2-c16t="true"
  data-g2-component="FormGroup"
>
  <div
    class="wp-components-grid wp-components-form-group css-2cxhgd"
    data-g2-c16t="true"
    data-g2-component="FormGroup"
  >
    <div
      class="wp-components-control-label css-2ldf03"
      data-g2-c16t="true"
      data-g2-component="ControlLabel"
    >
      <label
        class="wp-components-truncate wp-components-text wp-components-control-label css-1iskwod"
        data-g2-c16t="true"
        data-g2-component="ControlLabel"
        for="fname"
      />
    </div>
    <div
      class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-141ezrd"
      data-g2-c16t="true"
      data-g2-component="TextInput"
    >
      <div
        class="wp-components-flex-item wp-components-flex-block css-1mt9vp0"
        data-g2-c16t="true"
        data-g2-component="TextInputContent"
      >
        <input
          class="css-mtctxg"
          data-g2-c16t="true"
          data-g2-component="TextInputInput"
          id="fname"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render vertically 1`] = `
<div
  class="wp-components-form-group css-1bmv0pn"
  data-g2-c16t="true"
  data-g2-component="FormGroup"
>
  <div
    class="wp-components-control-label css-2ldf03"
    data-g2-c16t="true"
    data-g2-component="ControlLabel"
  >
    <label
      class="wp-components-truncate wp-components-text wp-components-control-label css-sju7lp"
      data-g2-c16t="true"
      data-g2-component="ControlLabel"
      for="fname"
    >
      First name
    </label>
  </div>
  <div
    class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-141ezrd"
    data-g2-c16t="true"
    data-g2-component="TextInput"
  >
    <div
      class="wp-components-flex-item wp-components-flex-block css-1mt9vp0"
      data-g2-c16t="true"
      data-g2-component="TextInputContent"
    >
      <input
        class="css-mtctxg"
        data-g2-c16t="true"
        data-g2-component="TextInputInput"
        id="fname"
        value=""
      />
    </div>
  </div>
</div>
`;
